kubernetes/ingress.in.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirects
  annotations: !Var ingress_annotations
spec:
  tls: !If
    test: !Var ingress_letsencrypt_enabled
    then:
      - secretName: ingress-letsencrypt
        hosts: !Concat,Loop
          over: !Var redirects
          as: redirect
          template: !Lookup redirect.hosts

  rules: !Concat,Loop
    over: !Var redirects
    as: redirect
    template: !Loop
      over: !Lookup redirect.hosts
      as: hostname
      template:
        host: !Var hostname
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: nginx
                  port:
                    number: 80
