kubernetes/service.in.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    stack: redirects
    component: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    stack: redirects
    component: nginx
